--- a/src/teaeli/OrderConfirmation.form
+++ b/src/teaeli/OrderConfirmation.form
@@ -46,7 +46,9 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Order Confirmation"/>
+            <TitledBorder justification="2" title="Order Confirmation">
+              <Font PropertyName="font" name="Tahoma" size="14" style="0"/>
+            </TitledBorder>
           </Border>
         </Property>
       </Properties>
